--- a/src/components/Contact/contact.css
+++ b/src/components/Contact/contact.css
@@ -144,6 +144,11 @@ input, textarea {
 }
 
 @media screen and (max-width: 1000px) {
+  .contact {
+    margin-top: 1rem;
+    margin-bottom: 2rem;
+  }
+
   .contact .form-wrapper  {   
     transform: translateX(0);
     max-width: 100%;
@@ -209,12 +214,15 @@ input, textarea {
 @media screen and (max-width: 800px) {
   .contact {
     padding-left: 0;
+    padding-bottom: 0;
+    margin-bottom: 0;
   }
 
   .contact .contact-wrapper .form-wrapper {
     padding-right: 1.5rem;
     border-left: none;
     border-right: none;
+    border-bottom: none;
   }
 
   .row {
@@ -242,12 +250,36 @@ input, textarea {
   }
 }
 
+@media screen and (max-width: 700px) {
+  .contact {
+    margin-top: 0;
+    padding-top: 2rem;
+  }
+}
+
+@media screen and (max-width: 500px) {
+  .contact  h2{
+    padding-left: 0;
+    padding-right: 0;
+    text-align: center;   
+    width: 400px; 
+  }
+}
+
 @media screen and (max-width: 400px) {
+  .contact {
+    padding-bottom: 1rem;
+  }
+  
   .contact h2 {
     font-size: 2.5rem;   
     width: max-content;
     top: -3%;
     padding: 0 .5em;
+  }
+
+  .contact .form-wrapper {
+    padding-bottom: 3rem;
   }
 }
 /* 
