--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -10,6 +10,12 @@ footer {
   padding-bottom: 2rem;
 }
 
+@media screen and (max-width: 800px) {
+ footer {
+  
+ }
+}
+
 @media screen and (max-width: 500px) {
   .footer-wrapper {
     flex-direction: column;
