--- a/src/components/Navigation/navigation.css
+++ b/src/components/Navigation/navigation.css
@@ -1,6 +1,6 @@
 .nav {
   width: 100%;
-  padding: 3rem 0;
+  padding: 2.5rem 0;
   background-color: rgba(157, 187, 223, .45);
 }
 
@@ -12,7 +12,7 @@
   gap: 3rem;
 }
 
-.nav-list li:is(.btn) a{
+.nav-list li:is(.btn) a {
   width: 100%;
   height: 100%;
 }
@@ -58,8 +58,7 @@
 
 @media screen and (max-width: 1200px) {
   .nav {
-    padding-top: .75em;
-    padding-bottom: .75em;
+    padding: 1.5rem 0;
   }  
 
   .nav-list {
@@ -68,13 +67,14 @@
 }
 
 @media screen and (max-width: 900px) {
-  .nav {
-    padding-top: .25em;
-    padding-bottom: .5em;
-  }  
-
   .nav-list {
     gap: .25rem;
+  }
+}
+
+@media screen and (max-width: 700px) {
+  .nav-list {
+    gap: 2em;
   }
 }
 
