--- a/src/components/Reserve/reserve.css
+++ b/src/components/Reserve/reserve.css
@@ -1,25 +1,27 @@
 .reserve {
   margin: 8rem 0 0 0;
-  border: 6px solid rgba(157, 187, 223, .3);
+  /* border: 6px solid rgba(157, 187, 223, .3); */
   text-align: center;
-  padding-bottom: 4.5rem;
+  /* padding-bottom: 4.5rem; */
+  padding: 4rem 0 5rem;
   border-radius: 3px; 
   margin-bottom: 4rem;
+  background-color: rgba(157, 187, 223, .45);
 }
 
 .reserve h2{
   font-family: "Poppins", sans-serif;
   font-size: 4rem;
-  background-color: #f8f8ff;
-  transform: translateY(-50%);
-  padding: 0 3rem;
-  display: inline-block;
+  /* background-color: #f8f8ff; */
+  /* transform: translateY(-50%); */
+  /* padding: 0 3rem; */
+  /* display: inline-block; */
   font-weight: 500;
 }
 
 .reserve .actions {
   gap: 4rem;
-  margin-top: 1rem;
+  margin-top: 5rem;
 }
 
 .reserve .actions button {
@@ -27,19 +29,18 @@
   width: 250px;
 }
 
-
-
-@media screen and (max-width: 1500px) {
+/* @media screen and (max-width: 1500px) {
   .reserve  {    
     margin-left: 1rem;
     margin-right: 1rem;
   }
-}
+} */
 
 @media screen and (max-width: 700px) {
   .reserve {
     margin-left: 0;
     margin-right: 0;
+    margin-top: 0;
   }
   
   .reserve h2 {
@@ -50,8 +51,7 @@
 
 @media screen and (max-width: 600px) {
   .reserve {
-    padding-bottom: 0;
-    padding: 0 1rem;
+    padding: 2rem;
   }
 
   .reserve h2 {
@@ -59,7 +59,7 @@
   }
 
   .reserve .actions {
-    margin-top: 0;
+    margin-top: 2rem;
     margin-bottom: 2rem;
   }  
 }
@@ -72,12 +72,12 @@
   }
   
   .reserve h2 {
-    font-size: 1.9rem;    
-    padding: 0 .25em;
+    font-size: 3.5rem;    
   }
 
   .reserve .actions {
     flex-direction: column;
+    margin-top: 3rem;
     gap: 1.5rem;
   }
 
